--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -770,6 +770,7 @@
                     <!-- sidebar end -->
                     <!-- main wrapper start -->
                     <div class="col-lg-9 order-1 order-lg-2">
+                    {% block body %}{% endblock %}
                         <!-- category tab area start -->
                         {# <div class="category-tab-area mb-30 mt-md-16 mt-sm-16">
                             <div class="category-tab">
