--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
     <meta name="description" content="meta description">
 
     <!-- Site title -->
-    <title>E-commerce</title>
+    <title>Pisco Business</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ asset('img/favicon.ico') }}" type="image/x-icon" />
     {% block stylesheets %}
@@ -111,10 +111,10 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-5">
                             <div class="header-call-action">
-                                <a href="#">
+                                {# <a href="#">
                                     <i class="fa fa-envelope"></i>
                                     pfaye3@gmail.com
-                                </a>
+                                </a> #}
                                 <a href="#">
                                     <i class="fa fa-phone"></i>
                                     (+221) 76 648 74 20
@@ -163,7 +163,7 @@
                         <div class="col-lg-3">
                             <div class="brand-logo">
                                 <a href="">
-                                    <img src="{{ asset('img/logo/logo.png') }}" alt="brand logo">
+                                    <img src="{{ asset('img/logo/piscobusinesslogo.png') }}" alt="brand logo">
                                 </a>
                             </div>
                         </div> <!-- end logo area -->
@@ -175,8 +175,8 @@
                                             <i class="fa fa-clock-o"></i>
                                         </div>
                                         <div class="shipping-content">
-                                            <h5>Ouvert</h5>
-                                            <span>Lundi- Samedi: 8.00 - 18.00</span>
+                                            <h5>Vente en ligne uniquement</h5>
+                                            <span>Lundi- Samedi</span>
                                         </div>
                                     </div> <!-- end single shipping -->
                                     <div class="single-block-shipping">
@@ -185,7 +185,7 @@
                                         </div>
                                         <div class="shipping-content">
                                             <h5>Livraison</h5>
-                                            <span>Possibilité !</span>
+                                            <span>Tous les jours</span>
                                         </div>
                                     </div> <!-- end single shipping -->
                                     <div class="single-block-shipping">
@@ -378,26 +378,26 @@
                     <div class="col-lg-12">
                         <div class="slider-wrapper-area4 mt-18 mt-md-0 mt-sm-0">
                             <div class="hero-slider-active hero__4 slick-dot-style hero-dot">
-                                <div class="single-slider d-flex align-items-center" style="background-image: url({{ asset('img/slider/slider4_bg1.jpg') }});">
+                                <div class="single-slider d-flex align-items-center" style="background-image: url({{ asset('img/slider/bannieres1.jpg') }});">
                                     <div class="container">
                                         <div class="slider-main-content">
                                             <div class="slider-text">
-                                                <h2><span>fashion new 2018</span></h2>
-                                                <h1><span>collection 2018</span></h1>
-                                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
-                                                <a class="home-btn hm4-btn" href="#">shop now</a>
+                                                <h2><span></span></h2>
+                                                <h1><span>Informatique</span></h1>
+                                                <p></p>
+                                                {# <a class="home-btn hm4-btn" href="#"></a> #}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="single-slider d-flex align-items-center" style="background-image: url({{ asset('img/slider/slider4_bg2.jpg') }});">
+                                <div class="single-slider d-flex align-items-center" style="background-image: url({{ asset('img/slider/bannieres2.jpg') }});">
                                     <div class="container">
                                         <div class="slider-main-content">
                                             <div class="slider-text">
-                                                <h2><span>fashion new 2018</span></h2>
-                                                <h1><span>collection 2018</span></h1>
-                                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
-                                                <a class="home-btn hm4-btn" href="#">shop now</a>
+                                                <h2><span></span></h2>
+                                                <h1><span>Habillement</span></h1>
+                                                <p></p>
+                                                {# <a class="home-btn hm4-btn" href="#">shop now</a> #}
                                             </div>
                                         </div>
                                     </div>
@@ -539,7 +539,7 @@
                         <!-- sidebar banner end -->
 
                         <!-- best seller area start -->
-                        <div class="main-sidebar category-wrapper fix mb-24">
+                        {# <div class="main-sidebar category-wrapper fix mb-24">
                             <div class="section-title-2 d-flex justify-content-between mb-28">
                                 <h3>best seller</h3>
                                 <div class="category-append"></div>
@@ -726,11 +726,11 @@
                                     </div> <!-- end single item -->
                                 </div> <!-- end single item column -->
                             </div>
-                        </div>
+                        </div> #}
                         <!-- best seller area end -->
 
                         <!-- testimonial area start -->
-                        <div class="main-sidebar testimonial-area pb-md-70 pb-sm-70">
+                        {# <div class="main-sidebar testimonial-area pb-md-70 pb-sm-70">
                             <div class="section-title-2 mb-28">
                                 <h3>Clients Say</h3>
                             </div> <!-- section title end -->
@@ -763,7 +763,7 @@
                                     </div>
                                 </div> <!-- end single testimonial item -->
                             </div>
-                        </div>
+                        </div> #}
                         <!-- testimonial area end -->
 
                     </div>
@@ -2611,11 +2611,11 @@
                             <!-- mailchimp-alerts end -->
                         </div> #}
                         <div class="social-icons">
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/people/Pisco-Business/100054636931234/" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
+                            {# <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Google-plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Youtube"><i class="fa fa-youtube"></i></a>
+                            <a href="#" data-toggle="tooltip" data-placement="top" title="Youtube"><i class="fa fa-youtube"></i></a> #}
                         </div>
                     </div>
                 </div>
@@ -2633,7 +2633,7 @@
                                 </div>
                                 <div class="widget-body">
                                     <ul class="location">
-                                        <li><i class="fa fa-envelope"></i>pfaye3@gmail.com</li>
+                                        {# <li><i class="fa fa-envelope"></i>pfaye3@gmail.com</li> #}
                                         <li><i class="fa fa-phone"></i>(+221) 76 648 74 20</li>
                                         <li><i class="fa fa-map-marker"></i>Addresse:  Sacre coeur 3 Dakar</li>
                                     </ul>
