--- a/templates/produit/unproduit.html.twig
+++ b/templates/produit/unproduit.html.twig
@@ -11,10 +11,15 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="product-large-slider mb-20 slick-arrow-style_2">
-                                        <div class="pro-large-img img-zoom" id="img1">
-                                            <img src="{{ asset('img/product/product-details-img1.jpg') }}" alt="" />
+                                    {# {% for image in produit.imagePs %}
+                                        <div class="pro-large-img img-zoom">
+                                            
+                                            {# <img src="{{ asset('/uploads/'~image.namep) }}" width="70px" height="90px" class="img-pri" alt=""> 
+                                            <img src="{{ asset('/uploads/'~image.namep) }}"  class="img-sec" alt="">
+                                           
                                         </div>
-                                        <div class="pro-large-img img-zoom" id="img2">
+                                      {% endfor %}    #}
+                                        {# <div class="pro-large-img img-zoom" id="img2">
                                             <img src="{{ asset('img/product/product-details-img2.jpg') }}" alt=""/>
                                         </div>
                                         <div class="pro-large-img img-zoom" id="img3">
@@ -22,15 +27,15 @@
                                         </div>
                                         <div class="pro-large-img img-zoom" id="img4">
                                             <img src="{{ asset('img/product/product-details-img4.jpg') }}" alt=""/>
-                                        </div>
+                                        </div> #}
                                     </div>
-                                    <div class="pro-nav slick-padding2 slick-arrow-style_2">
+                                    {# <div class="pro-nav slick-padding2 slick-arrow-style_2">
                                         <div class="pro-nav-thumb"><img src="img/product/product-details-img1.jpg" alt="" /></div>
                                         <div class="pro-nav-thumb"><img src="img/product/product-details-img2.jpg" alt="" /></div>
                                         <div class="pro-nav-thumb"><img src="img/product/product-details-img3.jpg" alt="" /></div>
                                         <div class="pro-nav-thumb"><img src="img/product/product-details-img4.jpg" alt="" /></div>
                                         <div class="pro-nav-thumb"><img src="img/product/product-details-img2.jpg" alt="" /></div>
-                                    </div>
+                                    </div> #}
                                 </div>
                                 <div class="col-lg-6">
                                     {# <div class="product-details-des mt-md-34 mt-sm-34">
@@ -76,10 +81,81 @@
                                             <a class="google" href="#"><i class="fa fa-google-plus"></i>share</a>
                                         </div>
                                     </div> #}
+                                    
                                 </div>
                             </div>
                         </div>
                         <!-- product details inner end -->
+
+                        <div class="product-details-inner fix">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="product-box-slider slick-padding slick-arrow-style_2 mb-20">
+                                    {% for image in produit.imagePs %}
+                                        <div class="pro-large-img">
+                                            {# <img src="assets/img/product/product-details-img1.jpg" alt="" /> #}
+                                            <img src="{{ asset('/uploads/'~image.namep) }}"  class="img-sec" alt="">
+                                        </div>
+                                    {% endfor %}     
+                                        {# <div class="pro-large-img">
+                                            <img src="assets/img/product/product-details-img2.jpg" alt=""/>
+                                        </div>
+                                        <div class="pro-large-img">
+                                            <img src="assets/img/product/product-details-img3.jpg" alt=""/>
+                                        </div>
+                                        <div class="pro-large-img">
+                                            <img src="assets/img/product/product-details-img4.jpg" alt=""/>
+                                        </div> #}
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <div class="product-details-des slider-box-center text-center mt-14">
+                                        <h3><a href="product-details.html">{{ produit.nom }}</a></h3>
+                                        {# <div class="ratings">
+                                            <span class="good"><i class="fa fa-star"></i></span>
+                                            <span class="good"><i class="fa fa-star"></i></span>
+                                            <span class="good"><i class="fa fa-star"></i></span>
+                                            <span class="good"><i class="fa fa-star"></i></span>
+                                            <span><i class="fa fa-star"></i></span>
+                                            <div class="pro-review">
+                                                <span>1 review(s)</span>
+                                            </div>
+                                        </div>
+                                        <div class="customer-rev">
+                                            <a href="#">(1 customer review)</a>
+                                        </div>
+                                        <div class="availability mt-10">
+                                            <h5>Availability:</h5>
+                                            <span>en stock</span>
+                                        </div> #}
+                                        <div class="pricebox">
+                                            <span class="regular-price">{{ produit.prix }} FCFA</span>
+                                        </div>
+                                        {#<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.<br>
+                                        Phasellus id nisi quis justo tempus mollis sed et dui. In hac habitasse platea dictumst. Suspendisse ultrices mauris diam. Nullam sed aliquet elit.</p>
+                                        <div class="quantity-cart-box d-flex align-items-center">
+                                            <div class="quantity">
+                                                <div class="pro-qty"><input type="text" value="1"></div>
+                                            </div>
+                                            <div class="action_link">
+                                                <a class="buy-btn" href="#">add to cart<i class="fa fa-shopping-cart"></i> </a>
+                                            </div>
+                                        </div>
+                                         <div class="useful-links mt-20">
+                                            <a href="#" data-toggle="tooltip" data-placement="top" title="Compare"><i class="fa fa-refresh"></i>compare</a>
+                                            <a href="#" data-toggle="tooltip" data-placement="top" title="Wishlist"><i class="fa fa-heart-o"></i>wishlist</a>
+                                        </div>
+                                        <div class="share-icon mt-20">
+                                            <a class="facebook" href="#"><i class="fa fa-facebook"></i>like</a>
+                                            <a class="twitter" href="#"><i class="fa fa-twitter"></i>tweet</a>
+                                            <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>save</a>
+                                            <a class="google" href="#"><i class="fa fa-google-plus"></i>share</a>
+                                        </div> #}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
 
                         <!-- product details reviews start -->
                         <div class="product-details-reviews mt-34">
