banniere verticale ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -533,7 +533,7 @@
                         <div class="home-single-sidebar mb-30 mt-md-36">
                             <div class="img-container fix img-full">
                                 <a href="#">
-                                    <img src="{{ asset('img/banner/banner_left2.jpg') }}" alt="">
+                                    <img src="{{ asset('img/banner/banverticale1.jpg') }}" alt="">
                                 </a>
                             </div>
                         </div>
