modification affichage produit page accueil

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -82,7 +82,7 @@
                                             </div> #}
                                         </div>
                                         <div class="product-content">
-                                            <h4><a href="{{ path('app_produit_show', {'id': produit.id}) }}">vertual product 01</a></h4>
+                                            <h4><a href="{{ path('app_produit_show', {'id': produit.id}) }}">{{ produit.nom }}</a></h4>
                                             <div class="pricebox">
                                                 <span class="regular-price">{{ produit.prix }} FCFA</span>
                                                 {# <div class="ratings">
