--- a/templates/produit/unproduit.html.twig
+++ b/templates/produit/unproduit.html.twig
@@ -111,7 +111,9 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="product-details-des slider-box-center text-center mt-14">
-                                        <h3><a href="product-details.html">{{ produit.nom }}</a></h3>
+                                        <h3><a href="">{{ produit.nom }}</a></h3>
+                                        {# <h3><a href="">{{ produit.categorie }}</a></h3> #}
+
                                         {# <div class="ratings">
                                             <span class="good"><i class="fa fa-star"></i></span>
                                             <span class="good"><i class="fa fa-star"></i></span>
